Fixed Reservation buttons and texts overflowing on multiple text size and screen resolution combinations.

--- a/app/assets/styles/_react-select.scss
+++ b/app/assets/styles/_react-select.scss
@@ -141,6 +141,7 @@ $selectDropdownPaddingRight: 4px;
 
   .app-Select__value-container--has-value {
     .app-Select__single-value {
+      font-size: 1em;
       color: $black;
     }
   }
