--- a/app/pages/user-reservations/reservation-list/_reservation-list.scss
+++ b/app/pages/user-reservations/reservation-list/_reservation-list.scss
@@ -12,7 +12,7 @@ $reservation-list-label-height: 20px;
     min-height: 180px;
 
     @media (max-width: $screen-xs-max) {
-      min-height: 200px;
+      min-height: 300px;
     }
 
     .image-container {
@@ -70,14 +70,40 @@ $reservation-list-label-height: 20px;
     .action-container {
       min-height: 180px;
 
+     @media (max-width: $screen-sm-min) {
+       min-height: 230px;
+     }
+
       .buttons {
         position: absolute;
         bottom: 0;
         margin-bottom: 25px;
+        @media (max-width: $screen-xs-max) {
+          top: 20%;
+        }
+
+        @media (min-width: $screen-md-min) and (max-width: $screen-md-max) {
+
+          width: 350px;
+          left: -8px;
+          }
+
+          @media (min-width: $screen-sm-min) and (max-width:$screen-sm-max) {
+            width: 300px;
+            left: -5%;
+            top: 20%;
+          }
+
 
         button {
           margin-left: 14px;
           width: 100px;
+          font-size: 1em;
+          margin-bottom: 10px;
+
+          @media (min-width: $screen-md-min){
+            width: 130px;
+          }
 
           @media (max-width: $screen-md-max) {
             margin-bottom: 10px;
